--- a/Dockerfile.amd64
+++ b/Dockerfile.amd64
@@ -3,22 +3,23 @@ FROM jc5x/firefly-iii-base-image:latest
 # See also: https://github.com/JC5/firefly-iii-base-image
 
 ENV FIREFLY_PATH=/var/www/firefly-iii COMPOSER_ALLOW_SUPERUSER=1
-LABEL version="1.6" maintainer="thegrumpydictator@gmail.com"
+LABEL version="2.0" maintainer="thegrumpydictator@gmail.com"
+
+# install Firefly III and patch configuration
+RUN mkdir /var/www/firefly-iii 
+WORKDIR /var/www/firefly-iii
+
+RUN curl -SL https://github.com/firefly-iii/firefly-iii/archive/master.tar.gz | tar xzC /var/www/firefly-iii --strip-components 1 && chown -R www-data:www-data /var/www && \
+    chmod -R 775 $FIREFLY_PATH/storage && \
+    composer install --prefer-dist --no-dev --no-scripts --no-suggest
 
 # Create volumes
 VOLUME $FIREFLY_PATH/storage/export $FIREFLY_PATH/storage/upload
 
-# Copy in Firefly III source
-WORKDIR $FIREFLY_PATH
-ADD . $FIREFLY_PATH
-
-# Ensure correct app directory permission, then `composer install`
-RUN chown -R www-data:www-data /var/www && \
-    chmod -R 775 $FIREFLY_PATH/storage && \
-    composer install --prefer-dist --no-dev --no-scripts --no-suggest
-
 # Expose port 80
 EXPOSE 80
 
+ADD scripts/entrypoint.sh /entrypoint.sh
+
 # Run entrypoint thing
-ENTRYPOINT [".deploy/docker/entrypoint.sh"]
+ENTRYPOINT ["/entrypoint.sh"]
