--- a/Dockerfile.arm64
+++ b/Dockerfile.arm64
@@ -22,9 +22,10 @@ VOLUME $FIREFLY_PATH/storage/export $FIREFLY_PATH/storage/upload
 # Expose port 80
 EXPOSE 80
 
+ADD scripts/wait-for-it.sh /wait-for-it.sh
 ADD scripts/entrypoint.sh /entrypoint.sh
 
-RUN chmod +x /entrypoint.sh
+RUN chmod +x /entrypoint.sh && chmod +x /wait-for-it.sh
 
 # Run entrypoint thing
 ENTRYPOINT ["/entrypoint.sh"]
