--- a/.travis.yml
+++ b/.travis.yml
@@ -13,21 +13,21 @@ jobs:
   include:
     - dist: xenial
       arch: amd64
-      env: ARCH=amd64 CHANNEL=alpha VERSION=5.0.0-alpha.2 RELEASE=develop
+      env: ARCH=amd64 CHANNEL=alpha VERSION=5.0.0-alpha.2 RELEASE=master
       stage: build
       script: ./scripts/travis.sh
     - dist: xenial
       arch: amd64
-      env: ARCH=arm CHANNEL=alpha VERSION=5.0.0-alpha.2 RELEASE=develop
+      env: ARCH=arm CHANNEL=alpha VERSION=5.0.0-alpha.2 RELEASE=master
       stage: build
       script: ./scripts/travis.sh
     - dist: xenial
       arch: arm64
-      env: ARCH=arm64 CHANNEL=alpha VERSION=5.0.0-alpha.2 RELEASE=develop
+      env: ARCH=arm64 CHANNEL=alpha VERSION=5.0.0-alpha.2 RELEASE=master
       stage: build
       script: ./scripts/travis.sh
     - dist: xenial
       arch: amd64
-      env: CHANNEL=alpha VERSION=5.0.0-alpha.2 RELEASE=develop
+      env: CHANNEL=alpha VERSION=5.0.0-alpha.2 RELEASE=master
       stage: manifest
       script: ./scripts/manifest.sh
