Build 5.0.0 in develop

--- a/firefly-iii.env
+++ b/firefly-iii.env
@@ -112,8 +112,12 @@ CER_PROVIDER=ratesapi
 # the free API up to the point where you might as well offer nothing.
 FIXER_API_KEY=
 
-# If you wish to track your own behavior over Firefly III, set a valid analytics tracker ID here.
-ANALYTICS_ID=
+# If you wish to track your own behavior over Firefly III, set valid analytics tracker information here.
+# Nobody uses this except for me on the demo site. But hey, feel free to use this if you want to.
+# Do not prepend the TRACKER_URL with http:// or https://
+# The only tracker supported is Matomo.
+TRACKER_SITE_ID=
+TRACKER_URL=
 
 # Firefly III has two options for user authentication. "eloquent" is the default,
 # and "ldap" for LDAP servers.
@@ -156,8 +160,15 @@ WINDOWS_SSO_KEY=AUTH_USER
 ADLDAP_SYNC_FIELD=userprincipalname
 
 # You can disable the X-Frame-Options header if it interferes with tools like
-# Organizr. This is at your own risk.
+# Organizr. This is at your own risk. Applications running in frames run the risk
+# of leaking information to their parent frame.
 DISABLE_FRAME_HEADER=false
+ 
+# You can disable the Content Security Policy header when you're using an ancient browser
+# or any version of Microsoft Edge / Internet Explorer (which amounts to the same thing really)
+# This leaves you with the risk of not being able to stop XSS bugs should they ever surface.
+# This is at your own risk.
+DISABLE_CSP_HEADER=false
 
 # You can fine tune the start-up of a Docker container by editing these environment variables.
 # Use this at your own risk. Disabling certain checks and features may result in lost of inconsistent data.
