--- a/firefly-iii.env
+++ b/firefly-iii.env
@@ -5,13 +5,22 @@ APP_ENV=local
 # Set to true if you want to see debug information in error screens.
 APP_DEBUG=false
 
-# This should be your email address
+# This should be your email address.
+# If you use Docker or similar, you can set this variable from a file by using SITE_OWNER_FILE
 SITE_OWNER=mail@example.com
 
 # The encryption key for your sessions. Keep this very secure.
 # If you generate a new one existing data must be considered LOST.
-# Change it to a string of exactly 32 chars or use command `php artisan key:generate` to generate it
+# Change it to a string of exactly 32 chars or use something like `php artisan key:generate` to generate it.
+# If you use Docker or similar, you can set this variable from a file by using APP_KEY_FILE
 APP_KEY=SomeRandomStringOf32CharsExactly
+
+#
+# Firefly III will launch using this language (for new users and unauthenticated visitors)
+# For a list of available languages: https://github.com/firefly-iii/firefly-iii/tree/master/resources/lang
+#
+# If text is still in English, remember that not everything may have been translated.
+DEFAULT_LANGUAGE=en_US
 
 # Change this value to your preferred time zone.
 # Example: Europe/Amsterdam
@@ -32,7 +41,9 @@ TRUSTED_PROXIES=
 
 # Several other options exist. You can use 'single' for one big fat error log (not recommended).
 # Also available are 'syslog', 'errorlog' and 'stdout' which will log to the system itself.
-LOG_CHANNEL=stdout
+# A rotating log option is 'daily', creates 5 files that (surprise) rotate.
+# Default setting 'stack' will log to 'daily' and to 'stdout' at the same time.
+LOG_CHANNEL=stack
 
 # Log level. You can set this from least severe to most severe:
 # debug, info, notice, warning, error, critical, alert, emergency
@@ -42,6 +53,8 @@ APP_LOG_LEVEL=notice
 
 # Database credentials. Make sure the database exists. I recommend a dedicated user for Firefly III
 # For other database types, please see the FAQ: https://docs.firefly-iii.org/support/faq
+# If you use Docker or similar, you can set these variables from a file by appending them with _FILE
+# Use "mysql" for MySQL and MariaDB. Use "sqlite" for SQLite.
 DB_CONNECTION=pgsql
 DB_HOST=firefly_iii_db
 DB_PORT=5432
@@ -50,6 +63,7 @@ DB_USERNAME=firefly
 DB_PASSWORD=secret_firefly_password
 
 # PostgreSQL supports SSL. You can configure it here.
+# If you use Docker or similar, you can set these variables from a file by appending them with _FILE
 PGSQL_SSL_MODE=prefer
 PGSQL_SSL_ROOT_CERT=null
 PGSQL_SSL_CERT=null
@@ -61,19 +75,25 @@ CACHE_DRIVER=file
 SESSION_DRIVER=file
 
 # If you set either of these to 'redis', you might want to update these settings too
+# If you use Docker or similar, you can set REDIS_HOST_FILE, REDIS_PASSWORD_FILE or
+# REDIS_PORT_FILE to set the value from a file instead of from an environment variable
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
-REDIS_DB="0" # always use quotes
+# always use quotes and make sure redis db "0" and "1" exists. Otherwise change accordingly.
+REDIS_DB="0"
 REDIS_CACHE_DB="1"
 
 # Cookie settings. Should not be necessary to change these.
+# If you use Docker or similar, you can set COOKIE_DOMAIN_FILE to set
+# the value from a file instead of from an environment variable
 COOKIE_PATH="/"
 COOKIE_DOMAIN=
 COOKIE_SECURE=false
 
 # If you want Firefly III to mail you, update these settings
 # For instructions, see: https://docs.firefly-iii.org/advanced-installation/email
+# If you use Docker or similar, you can set these variables from a file by appending them with _FILE
 MAIL_DRIVER=log
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
@@ -83,12 +103,19 @@ MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
 # Other mail drivers:
+# If you use Docker or similar, you can set these variables from a file by appending them with _FILE
 MAILGUN_DOMAIN=
 MAILGUN_SECRET=
+
+
 # If you are on EU region in mailgun, use api.eu.mailgun.net, otherwise use api.mailgun.net
+# If you use Docker or similar, you can set this variable from a file by appending it with _FILE
 MAILGUN_ENDPOINT=api.mailgun.net
+
+# If you use Docker or similar, you can set these variables from a file by appending them with _FILE
 MANDRILL_SECRET=
 SPARKPOST_SECRET=
+
 
 # Firefly III can send you the following messages
 SEND_REGISTRATION_MAIL=true
@@ -98,7 +125,13 @@ SEND_ERROR_MESSAGE=true
 SEND_REPORT_JOURNALS=true
 
 # Set a Mapbox API key here (see mapbox.com) so there might be a map available at various places.
+# If you use Docker or similar, you can set this variable from a file by appending it with _FILE
 MAPBOX_API_KEY=
+
+# The map will default to this location:
+MAP_DEFAULT_LAT=51.983333
+MAP_DEFAULT_LONG=5.916667
+MAP_DEFAULT_ZOOM=6
 
 # Firefly III currently supports two provider for live Currency Exchange Rates:
 # "fixer", and "ratesapi".
@@ -110,27 +143,25 @@ CER_PROVIDER=ratesapi
 # set a Fixer IO API key here (see https://fixer.io) to enable live currency exchange rates.
 # Please note that this WILL ONLY WORK FOR PAID fixer.io accounts because they severely limited
 # the free API up to the point where you might as well offer nothing.
+# If you use Docker or similar, you can set this variable from a file by appending it with _FILE
 FIXER_API_KEY=
-
-# If you wish to track your own behavior over Firefly III, set valid analytics tracker information here.
-# Nobody uses this except for me on the demo site. But hey, feel free to use this if you want to.
-# Do not prepend the TRACKER_URL with http:// or https://
-# The only tracker supported is Matomo.
-TRACKER_SITE_ID=
-TRACKER_URL=
 
 # Firefly III has two options for user authentication. "eloquent" is the default,
 # and "ldap" for LDAP servers.
 # For full instructions on these settings please visit:
 # https://docs.firefly-iii.org/advanced-installation/authentication
+# If you use Docker or similar, you can set this variable from a file by appending it with _FILE
 LOGIN_PROVIDER=eloquent
 
 # LDAP connection configuration
 # OpenLDAP, FreeIPA or ActiveDirectory
+# # If you use Docker or similar, you can set this variable from a file by appending it with _FILE
 ADLDAP_CONNECTION_SCHEME=OpenLDAP
 ADLDAP_AUTO_CONNECT=true
 
 # LDAP connection settings
+# You can set the following variables from a file by appending them with _FILE:
+# ADLDAP_CONTROLLERS, ADLDAP_PORT, ADLDAP_BASEDN
 ADLDAP_CONTROLLERS=
 ADLDAP_PORT=389
 ADLDAP_TIMEOUT=5
@@ -139,11 +170,14 @@ ADLDAP_FOLLOW_REFFERALS=false
 ADLDAP_USE_SSL=false
 ADLDAP_USE_TLS=false
 
+# You can set the following variables from a file by appending them with _FILE:
 ADLDAP_ADMIN_USERNAME=
 ADLDAP_ADMIN_PASSWORD=
 
+# You can set the following variables from a file by appending them with _FILE:
 ADLDAP_ACCOUNT_PREFIX=
 ADLDAP_ACCOUNT_SUFFIX=
+
 
 # LDAP authentication settings.
 ADLDAP_PASSWORD_SYNC=false
@@ -153,22 +187,37 @@ ADLDAP_DISCOVER_FIELD=distinguishedname
 ADLDAP_AUTH_FIELD=distinguishedname
 
 # Will allow SSO if your server provides an AUTH_USER field.
+# You can set the following variables from a file by appending them with _FILE:
 WINDOWS_SSO_DISCOVER=samaccountname
 WINDOWS_SSO_KEY=AUTH_USER
 
 # field to sync as local username.
+# You can set the following variable from a file by appending it with _FILE:
 ADLDAP_SYNC_FIELD=userprincipalname
 
 # You can disable the X-Frame-Options header if it interferes with tools like
 # Organizr. This is at your own risk. Applications running in frames run the risk
 # of leaking information to their parent frame.
 DISABLE_FRAME_HEADER=false
- 
+
 # You can disable the Content Security Policy header when you're using an ancient browser
 # or any version of Microsoft Edge / Internet Explorer (which amounts to the same thing really)
 # This leaves you with the risk of not being able to stop XSS bugs should they ever surface.
 # This is at your own risk.
 DISABLE_CSP_HEADER=false
+
+# If you wish to track your own behavior over Firefly III, set valid analytics tracker information here.
+# Nobody uses this except for me on the demo site. But hey, feel free to use this if you want to.
+# Do not prepend the TRACKER_URL with http:// or https://
+# The only tracker supported is Matomo.
+# You can set the following variables from a file by appending them with _FILE:
+TRACKER_SITE_ID=
+TRACKER_URL=
+
+#
+# Firefly III could (in the future) collect telemetry on how you use Firefly III.
+# In order to allow this, change the following variable to true:
+SEND_TELEMETRY=false
 
 # You can fine tune the start-up of a Docker container by editing these environment variables.
 # Use this at your own risk. Disabling certain checks and features may result in lost of inconsistent data.
@@ -218,4 +267,3 @@ IS_SANDSTORM=false
 IS_DOCKER=false
 IS_HEROKU=false
 BUNQ_USE_SANDBOX=false
-FFIII_LAYOUT=v1
