--- a/.travis.yml
+++ b/.travis.yml
@@ -15,24 +15,24 @@ jobs:
     - dist: xenial
       os: linux
       arch: amd64
-      env: ARCH=amd64 CHANNEL=stable VERSION=5.1.1 RELEASE=develop
+      env: ARCH=amd64 CHANNEL=alpha VERSION=5.2.0-alpha.1 RELEASE=develop
       stage: build
       script: ./scripts/travis.sh
     - dist: xenial
       os: linux
       arch: amd64
-      env: ARCH=arm CHANNEL=stable VERSION=5.1.1 RELEASE=develop
+      env: ARCH=arm CHANNEL=alpha VERSION=5.2.0-alpha.1 RELEASE=develop
       stage: build
       script: ./scripts/travis.sh
     - dist: xenial
       os: linux
       arch: arm64
-      env: ARCH=arm64 CHANNEL=stable VERSION=5.1.1 RELEASE=develop
+      env: ARCH=arm64 CHANNEL=alpha VERSION=5.2.0-alpha.1 RELEASE=develop
       stage: build
       script: ./scripts/travis.sh
     - dist: xenial
       os: linux
       arch: amd64
-      env: CHANNEL=stable VERSION=5.1.1 RELEASE=develop
+      env: CHANNEL=alpha VERSION=5.2.0-alpha.1 RELEASE=develop
       stage: manifest
       script: ./scripts/manifest.sh
