--- a/.travis.yml
+++ b/.travis.yml
@@ -19,24 +19,24 @@ jobs:
     - dist: xenial
       os: linux
       arch: amd64
-      env: ARCH=amd64 VERSION=5.1.1
+      env: ARCH=amd64 VERSION=develop
       stage: build
       script: ./scripts/travis.sh
     - dist: xenial
       os: linux
       arch: amd64
-      env: ARCH=arm VERSION=5.1.1
+      env: ARCH=arm VERSION=develop
       stage: build
       script: ./scripts/travis.sh
     - dist: xenial
       os: linux
       arch: arm64
-      env: ARCH=arm64 VERSION=5.1.1
+      env: ARCH=arm64 VERSION=develop
       stage: build
       script: ./scripts/travis.sh
     - dist: xenial
       os: linux
       arch: amd64
-      env: VERSION=5.1.1
+      env: VERSION=develop
       stage: manifest
       script: ./scripts/manifest.sh
