Update env file.

--- a/firefly-iii.env
+++ b/firefly-iii.env
@@ -24,6 +24,7 @@ DEFAULT_LANGUAGE=en_US
 
 # Change this value to your preferred time zone.
 # Example: Europe/Amsterdam
+# For a list of supported time zones, see https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 TZ=Europe/Amsterdam
 
 # This variable must match your installation's external address but keep in mind that
@@ -35,14 +36,16 @@ APP_URL=http://localhost
 TRUSTED_PROXIES=
 
 # The log channel defines where your log entries go to.
-# - Docker + versions <= 4.8.1.8 and before: use "stdout"
-# - Docker + versions >  4.8.1.8: use "docker_out"
-# - For everything else, use 'daily'
-
 # Several other options exist. You can use 'single' for one big fat error log (not recommended).
 # Also available are 'syslog', 'errorlog' and 'stdout' which will log to the system itself.
 # A rotating log option is 'daily', creates 5 files that (surprise) rotate.
 # Default setting 'stack' will log to 'daily' and to 'stdout' at the same time.
+
+# - Docker + versions <= 4.8.1.8 and before: use "stdout"
+# - Docker + versions >  4.8.1.8           : use "docker_out"
+# - Docker + versions >=  5.1.1            : use "stack"
+# - For everything else (als not Docker)   : use 'stack'
+
 LOG_CHANNEL=stack
 
 # Log level. You can set this from least severe to most severe:
@@ -56,7 +59,7 @@ APP_LOG_LEVEL=notice
 # If you use Docker or similar, you can set these variables from a file by appending them with _FILE
 # Use "mysql" for MySQL and MariaDB. Use "sqlite" for SQLite.
 DB_CONNECTION=pgsql
-DB_HOST=firefly_iii_db
+DB_HOST=fireflyiiidb
 DB_PORT=5432
 DB_DATABASE=firefly
 DB_USERNAME=firefly
