Main build script.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
-language: shell
-dist: xenial
-os: linux
+
+#
+# Travis configuration for Firefly III.
+#
+
+sudo: required
+language: bash
 
 branches:
   only:
@@ -9,34 +13,25 @@ branches:
 services:
   - docker
 
-#
-# Job configuration:
-# - ARCH    = The architecture of the build. This should match the "arch:"" argument of the build itself.
-# - VERSION = Either the version to build OR "develop" to build the latest develop version.
-
 jobs:
   include:
     - dist: xenial
-      os: linux
       arch: amd64
-      env: ARCH=amd64 VERSION=5.2.0-beta.1
+      env: ARCH=amd64 VERSION=develop
       stage: build
       script: ./scripts/travis.sh
     - dist: xenial
-      os: linux
       arch: amd64
-      env: ARCH=arm VERSION=5.2.0-beta.1
+      env: ARCH=arm VERSION=develop
       stage: build
       script: ./scripts/travis.sh
     - dist: xenial
-      os: linux
       arch: arm64
-      env: ARCH=arm64 VERSION=5.2.0-beta.1
+      env: ARCH=arm64 VERSION=develop
       stage: build
       script: ./scripts/travis.sh
     - dist: xenial
-      os: linux
       arch: amd64
-      env: VERSION=5.2.0-beta.1
+      env:  VERSION=develop
       stage: manifest
       script: ./scripts/manifest.sh
