--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,12 +13,14 @@ services:
       - fireflyiiidb
   
   fireflyiiidb:
-    image: postgres:10-alpine
+    image: mariadb:10.4-bionic
     environment:
-      - POSTGRES_USER=firefly
-      - POSTGRES_PASSWORD=secret_firefly_password
+      - MYSQL_RANDOM_ROOT_PASSWORD=yes
+      - MYSQL_USER=firefly
+      - MYSQL_PASSWORD=secret_firefly_password
+      - MYSQL_DATABASE=firefly
     volumes:
-      - firefly_iii_db:/var/lib/postgresql/data
+      - firefly_iii_db:/var/lib/mysql
 
 volumes:
    firefly_iii_export:
