--- a/Dockerfile.arm
+++ b/Dockerfile.arm
@@ -1,5 +1,7 @@
 FROM jc5x/firefly-iii-base-image:latest-arm
 
+USER root
+
 # See also: https://github.com/JC5/firefly-iii-base-image
 
 ARG version
@@ -8,20 +10,21 @@ ENV VERSION=$version
 ENV FIREFLY_PATH=/var/www/firefly-iii COMPOSER_ALLOW_SUPERUSER=1
 LABEL version="2.0" maintainer="thegrumpydictator@gmail.com"
 
-# install Firefly III and patch configuration
-RUN mkdir /var/www/firefly-iii 
+# set up some stuff under root.
+COPY [ "scripts/wait-for-it.sh", "/wait-for-it.sh" ]
+COPY [ "scripts/entrypoint.sh", "/entrypoint.sh" ]
+RUN chmod +x /entrypoint.sh && chmod +x /wait-for-it.sh && mkdir /var/www/firefly-iii && chown -R www-data:www-data /var/www/firefly-iii 
+
+USER www-data
+
 WORKDIR /var/www/firefly-iii
 
 RUN curl -SL https://github.com/firefly-iii/firefly-iii/archive/$VERSION.tar.gz | tar xzC /var/www/firefly-iii --strip-components 1 && chown -R www-data:www-data /var/www && \
     chmod -R 775 $FIREFLY_PATH/storage && \
     composer install --prefer-dist --no-dev --no-scripts --no-suggest
 
-VOLUME $FIREFLY_PATH/storage/export $FIREFLY_PATH/storage/upload
 
 EXPOSE 80
+VOLUME $FIREFLY_PATH/storage/export $FIREFLY_PATH/storage/upload
 
-COPY [ "scripts/wait-for-it.sh", "/wait-for-it.sh" ]
-COPY [ "scripts/entrypoint.sh", "/entrypoint.sh" ]
-
-RUN chmod +x /entrypoint.sh && chmod +x /wait-for-it.sh
 ENTRYPOINT ["/entrypoint.sh"]
