--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@
 # Travis configuration for Firefly III.
 #
 
-sudo: required
-language: bash
+language: shell
+dist: xenial
+os: linux
 
 branches:
   only:
@@ -17,21 +18,21 @@ jobs:
   include:
     - dist: xenial
       arch: amd64
-      env: ARCH=amd64 VERSION=5.2.8
+      env: ARCH=amd64 VERSION=develop
       stage: build
       script: ./scripts/travis.sh
     - dist: xenial
       arch: amd64
-      env: ARCH=arm VERSION=5.2.8
+      env: ARCH=arm VERSION=develop
       stage: build
       script: ./scripts/travis.sh
     - dist: xenial
       arch: arm64
-      env: ARCH=arm64 VERSION=5.2.8
+      env: ARCH=arm64 VERSION=develop
       stage: build
       script: ./scripts/travis.sh
     - dist: xenial
       arch: amd64
-      env:  VERSION=5.2.8
+      env:  VERSION=develop
       stage: manifest
       script: ./scripts/manifest.sh
