--- a/firefly-iii.env
+++ b/firefly-iii.env
@@ -22,14 +22,14 @@ APP_KEY=SomeRandomStringOf32CharsExactly
 # If text is still in English, remember that not everything may have been translated.
 DEFAULT_LANGUAGE=en_US
 
+# The locale defines how numbers are formatted.
+# by default this value is the same as whatever the language is.
+DEFAULT_LOCALE=equal
+
 # Change this value to your preferred time zone.
 # Example: Europe/Amsterdam
 # For a list of supported time zones, see https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 TZ=Europe/Amsterdam
-
-# This variable must match your installation's external address but keep in mind that
-# it's only used on the command line as a fallback value.
-APP_URL=http://localhost
 
 # TRUSTED_PROXIES is a useful variable when using Docker and/or a reverse proxy.
 # Set it to ** and reverse proxies work just fine.
@@ -64,6 +64,17 @@ DB_PORT=5432
 DB_DATABASE=firefly
 DB_USERNAME=firefly
 DB_PASSWORD=secret_firefly_password
+
+# MySQL supports SSL. You can configure it here.
+# If you use Docker or similar, you can set these variables from a file by appending them with _FILE
+MYSQL_USE_SSL=false
+MYSQL_SSL_VERIFY_SERVER_CERT=true
+# You need to set at least of these options
+MYSQL_SSL_CAPATH=/etc/ssl/certs/
+MYSQL_SSL_CA=
+MYSQL_SSL_CERT=
+MYSQL_SSL_KEY=
+MYSQL_SSL_CIPHER=
 
 # PostgreSQL supports SSL. You can configure it here.
 # If you use Docker or similar, you can set these variables from a file by appending them with _FILE
@@ -156,6 +167,16 @@ FIXER_API_KEY=
 # If you use Docker or similar, you can set this variable from a file by appending it with _FILE
 LOGIN_PROVIDER=eloquent
 
+#
+# It's also possible to change the way users are authenticated. You could use Authelia for example.
+# Authentication via the REMOTE_USER header is supported. Change the value below to "remote_user_guard".
+#
+# If you do this please read the documentation for instructions and warnings:
+# https://docs.firefly-iii.org/advanced-installation/authentication
+#
+# This function is available in Firefly III v5.3.0 and higher.
+AUTHENTICATION_GUARD=web
+
 # LDAP connection configuration
 # OpenLDAP, FreeIPA or ActiveDirectory
 # # If you use Docker or similar, you can set this variable from a file by appending it with _FILE
@@ -170,8 +191,16 @@ ADLDAP_PORT=389
 ADLDAP_TIMEOUT=5
 ADLDAP_BASEDN=""
 ADLDAP_FOLLOW_REFFERALS=false
+
+# SSL/TLS settings
 ADLDAP_USE_SSL=false
 ADLDAP_USE_TLS=false
+ADLDAP_SSL_CACERTDIR=
+ADLDAP_SSL_CACERTFILE=
+ADLDAP_SSL_CERTFILE=
+ADLDAP_SSL_KEYFILE=
+ADLDAP_SSL_CIPHER_SUITE=
+ADLDAP_SSL_REQUIRE_CERT=
 
 # You can set the following variables from a file by appending them with _FILE:
 ADLDAP_ADMIN_USERNAME=
@@ -191,6 +220,7 @@ ADLDAP_AUTH_FIELD=distinguishedname
 
 # Will allow SSO if your server provides an AUTH_USER field.
 # You can set the following variables from a file by appending them with _FILE:
+WINDOWS_SSO_ENABLED=false
 WINDOWS_SSO_DISCOVER=samaccountname
 WINDOWS_SSO_KEY=AUTH_USER
 
@@ -218,8 +248,9 @@ TRACKER_SITE_ID=
 TRACKER_URL=
 
 #
-# Firefly III could (in the future) collect telemetry on how you use Firefly III.
-# In order to allow this, change the following variable to true:
+# Firefly III can collect telemetry on how you use Firefly III. This is opt-in.
+# In order to allow this, change the following variable to true.
+# To read more about this feature, go to this page: https://docs.firefly-iii.org/support/telemetry
 SEND_TELEMETRY=false
 
 # You can fine tune the start-up of a Docker container by editing these environment variables.
@@ -267,6 +298,17 @@ DEMO_USERNAME=
 DEMO_PASSWORD=
 USE_ENCRYPTION=false
 IS_SANDSTORM=false
-IS_DOCKER=false
 IS_HEROKU=false
-BUNQ_USE_SANDBOX=false
+FIREFLY_III_LAYOUT=v1
+
+#
+# If you have trouble configuring your Firefly III installation, DON'T BOTHER setting this variable.
+# It won't work. It doesn't do ANYTHING. Don't believe the lies you read online. I'm not joking.
+# This configuration value WILL NOT HELP.
+#
+# This variable is ONLY used in some of the emails Firefly III sends around. Nowhere else.
+# So when configuring anything WEB related this variable doesn't do anything. Nothing
+#
+# If you're stuck I understand you get desperate but look SOMEWHERE ELSE.
+#
+APP_URL=http://localhost
