--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,14 +11,15 @@ services:
       - 80:80
     depends_on:
       - fireflyiiidb
-  
   fireflyiiidb:
-    image: postgres:10-alpine
+    image: yobasystems/alpine-mariadb:latest
     environment:
-      - POSTGRES_USER=firefly
-      - POSTGRES_PASSWORD=secret_firefly_password
+      - MYSQL_RANDOM_ROOT_PASSWORD=yes
+      - MYSQL_USER=firefly
+      - MYSQL_PASSWORD=secret_firefly_password
+      - MYSQL_DATABASE=firefly
     volumes:
-      - firefly_iii_db:/var/lib/postgresql/data
+      - firefly_iii_db:/var/lib/mysql
 
 volumes:
    firefly_iii_export:
