--- a/firefly-iii.env
+++ b/firefly-iii.env
@@ -10,7 +10,7 @@ APP_DEBUG=false
 SITE_OWNER=mail@example.com
 
 # The encryption key for your sessions. Keep this very secure.
-# If you generate a new one existing data must be considered LOST.
+# If you generate a new one all existing attachments must be considered LOST.
 # Change it to a string of exactly 32 chars or use something like `php artisan key:generate` to generate it.
 # If you use Docker or similar, you can set this variable from a file by using APP_KEY_FILE
 APP_KEY=SomeRandomStringOf32CharsExactly
@@ -57,7 +57,9 @@ APP_LOG_LEVEL=notice
 # Database credentials. Make sure the database exists. I recommend a dedicated user for Firefly III
 # For other database types, please see the FAQ: https://docs.firefly-iii.org/support/faq
 # If you use Docker or similar, you can set these variables from a file by appending them with _FILE
-# Use "mysql" for MySQL and MariaDB. Use "sqlite" for SQLite.
+# Use "pgsql" for PostgreSQL
+# Use "mysql" for MySQL and MariaDB.
+# Use "sqlite" for SQLite.
 DB_CONNECTION=mysql
 DB_HOST=fireflyiiidb
 DB_PORT=3306
@@ -108,8 +110,8 @@ COOKIE_SECURE=false
 # If you want Firefly III to mail you, update these settings
 # For instructions, see: https://docs.firefly-iii.org/advanced-installation/email
 # If you use Docker or similar, you can set these variables from a file by appending them with _FILE
-MAIL_DRIVER=log
-MAIL_HOST=smtp.mailtrap.io
+MAIL_MAILER=log
+MAIL_HOST=null
 MAIL_PORT=2525
 MAIL_FROM=changeme@example.com
 MAIL_USERNAME=null
@@ -176,6 +178,13 @@ LOGIN_PROVIDER=eloquent
 #
 # This function is available in Firefly III v5.3.0 and higher.
 AUTHENTICATION_GUARD=web
+
+#
+# Likewise, it's impossible to log out users who's authentication is handled by an external system.
+# Enter a custom URL here that will force a logout (your authentication provider can tell you).
+# Setting this variable only works when AUTHENTICATION_GUARD != web
+#
+CUSTOM_LOGOUT_URI=
 
 # LDAP connection configuration
 # OpenLDAP, FreeIPA or ActiveDirectory
@@ -297,7 +306,6 @@ PUSHER_ID=
 DEMO_USERNAME=
 DEMO_PASSWORD=
 USE_ENCRYPTION=false
-IS_SANDSTORM=false
 IS_HEROKU=false
 FIREFLY_III_LAYOUT=v1
 
