--- a/.travis.yml
+++ b/.travis.yml
@@ -18,21 +18,21 @@ jobs:
   include:
     - dist: xenial
       arch: amd64
-      env: ARCH=amd64 VERSION=develop
+      env: ARCH=amd64 VERSION=5.4.0-alpha.3
       stage: build
       script: ./scripts/travis.sh
     - dist: xenial
       arch: amd64
-      env: ARCH=arm VERSION=develop
+      env: ARCH=arm VERSION=5.4.0-alpha.3
       stage: build
       script: ./scripts/travis.sh
     - dist: xenial
       arch: arm64
-      env: ARCH=arm64 VERSION=develop
+      env: ARCH=arm64 VERSION=5.4.0-alpha.3
       stage: build
       script: ./scripts/travis.sh
     - dist: xenial
       arch: amd64
-      env:  VERSION=develop
+      env:  VERSION=5.4.0-alpha.3
       stage: manifest
       script: ./scripts/manifest.sh
