--- a/.travis.yml
+++ b/.travis.yml
@@ -20,19 +20,19 @@ jobs:
       arch: amd64
       env: ARCH=amd64 VERSION=develop
       stage: build
-      script: ./scripts/travis.sh
+      script: ./travis.sh
     - dist: xenial
       arch: amd64
       env: ARCH=arm VERSION=develop
       stage: build
-      script: ./scripts/travis.sh
+      script: ./travis.sh
     - dist: xenial
       arch: arm64
       env: ARCH=arm64 VERSION=develop
       stage: build
-      script: ./scripts/travis.sh
+      script: ./travis.sh
     - dist: xenial
       arch: amd64
       env:  VERSION=develop
       stage: manifest
-      script: ./scripts/manifest.sh
+      script: ./manifest.sh
