--- a/Dockerfile.arm64
+++ b/Dockerfile.arm64
@@ -6,8 +6,8 @@ ARG version
 ENV VERSION=$version
 
 # install Firefly III and execute finalize-image.
-RUN curl -SL https://github.com/firefly-iii/firefly-iii/archive/$VERSION.tar.gz | tar xzC $FIREFLY_PATH --strip-components 1 && \
-    chmod -R 775 $FIREFLY_PATH/storage && \
+RUN curl -SL https://github.com/firefly-iii/firefly-iii/archive/$VERSION.tar.gz | tar xzC $FIREFLY_III_PATH --strip-components 1 && \
+    chmod -R 775 $FIREFLY_III_PATH/storage && \
     composer install --prefer-dist --no-dev --no-scripts --no-suggest && /usr/local/bin/finalize-image.sh
 
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
