--- a/.travis.yml
+++ b/.travis.yml
@@ -14,25 +14,16 @@ branches:
 services:
   - docker
 
-jobs:
-  include:
-    - dist: xenial
-      arch: amd64
-      env: ARCH=amd64 VERSION=develop
-      stage: build
-      script: ./travis.sh
-    - dist: xenial
-      arch: amd64
-      env: ARCH=arm VERSION=develop
-      stage: build
-      script: ./travis.sh
-    - dist: xenial
-      arch: arm64
-      env: ARCH=arm64 VERSION=develop
-      stage: build
-      script: ./travis.sh
-    - dist: xenial
-      arch: amd64
-      env:  VERSION=develop
-      stage: manifest
-      script: ./manifest.sh
+before_install:
+  - sudo rm -rf /var/lib/apt/lists/*
+  - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+  - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) edge"
+  - sudo apt-get update
+  - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
+  - mkdir -vp ~/.docker/cli-plugins/
+  - curl --silent -L "https://github.com/docker/buildx/releases/download/v0.3.0/buildx-v0.3.0.linux-amd64" > ~/.docker/cli-plugins/docker-buildx
+  - chmod a+x ~/.docker/cli-plugins/docker-buildx
+
+
+env:  VERSION=develop
+script: ./build-travis.sh
