--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.3'
 
 services:
   fireflyiii:
-    image: jc5x/firefly-iii:latest
+    image: fireflyiii/core:latest
     volumes:
       - firefly_iii_upload:/var/www/html/storage/upload
     env_file: .env
