--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,11 +15,7 @@ services:
     image: mariadb    
     hostname: fireflyiiidb
     restart: always
-    environment:
-      - MYSQL_RANDOM_ROOT_PASSWORD=yes
-      - MYSQL_USER=firefly
-      - MYSQL_PASSWORD=secret_firefly_password
-      - MYSQL_DATABASE=firefly
+    env_file: .db.env
     volumes:
       - firefly_iii_db:/var/lib/mysql
 volumes:
