--- a/docker-compose-importer.yml
+++ b/docker-compose-importer.yml
@@ -12,6 +12,7 @@ services:
   app:
     image: fireflyiii/core:latest
     hostname: app
+    container_name: firefly_iii_core
     networks:
       - firefly_iii
     restart: always
@@ -24,7 +25,8 @@ services:
       - db
   db:
     image: mariadb
-    hostname: fireflyiiidb
+    hostname: db
+    container_name: firefly_iii_db
     networks:
       - firefly_iii
     restart: always
@@ -35,6 +37,8 @@ services:
   importer:
     image: fireflyiii/data-importer:latest
     hostname: importer
+    restart: always
+    container_name: firefly_iii_importer
     networks:
       - firefly_iii
     restart: always
@@ -48,8 +52,11 @@ services:
     #
     # To make this work, set STATIC_CRON_TOKEN in your .env file or as an environment variable and replace REPLACEME below
     # The STATIC_CRON_TOKEN must be *exactly* 32 characters long
+    # Here is inspiration: https://www.random.org/strings/?num=1&len=32&digits=on&upperalpha=on&loweralpha=on&unique=on&format=html&rnd=new
     #
     image: alpine
+    container_name: firefly_iii_cron
+    restart: always
     command: sh -c "echo \"0 3 * * * wget -qO- http://app:8080/api/v1/cron/REPLACEME\" | crontab - && crond -f -L /dev/stdout"
     networks:
       - firefly_iii
