--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: '3.3'
 services:
   app:
     image: fireflyiii/core:latest
+    hostname: app
+    container_name: firefly_iii_core
     restart: always
     volumes:
       - firefly_iii_upload:/var/www/html/storage/upload
@@ -15,7 +17,8 @@ services:
       - db
   db:
     image: mariadb    
-    hostname: fireflyiiidb
+    hostname: db
+    container_name: firefly_iii_db
     restart: always
     env_file: .db.env
     networks:
@@ -28,6 +31,8 @@ services:
     # The STATIC_CRON_TOKEN must be *exactly* 32 characters long
     #
     image: alpine
+    restart: always
+    container_name: firefly_iii_cron
     command: sh -c "echo \"0 3 * * * wget -qO- http://app:8080/api/v1/cron/REPLACEME\" | crontab - && crond -f -L /dev/stdout"
     networks:
       - firefly_iii
