--- a/docker-compose-importer.yml
+++ b/docker-compose-importer.yml
@@ -24,7 +24,7 @@ services:
     depends_on:
       - db
   db:
-    image: mariadb
+    image: mariadb:lts
     hostname: db
     container_name: firefly_iii_db
     networks:
