--- a/.db.env
+++ b/.db.env
@@ -1,4 +1,4 @@
 MYSQL_RANDOM_ROOT_PASSWORD=yes
 MYSQL_USER=firefly
-MYSQL_PASSWORD=secret_firefly_password
+MYSQL_PASSWORD=1234
 MYSQL_DATABASE=firefly
