--- a/.github/workflows/ui-testing.yaml
+++ b/.github/workflows/ui-testing.yaml
@@ -6,6 +6,9 @@ on:
     branches:
      - main    
 
+
+
+
 jobs:
   selenium-tests:
     runs-on: ubuntu-latest
@@ -27,25 +30,15 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-
-    - name: Install Chrome 117 (stable)
+        
+    - name: Install Chrome and ChromeDriver
       run: |
-        wget https://dl.google.com/linux/chrome/deb/pool/main/g/google-chrome-stable/google-chrome-stable_117.0.5938.92-1_amd64.deb
-        sudo dpkg -i google-chrome-stable_117.0.5938.92-1_amd64.deb || sudo apt-get -f install -y
-        google-chrome --version
-
-    - name: Install matching ChromeDriver for Chrome 117
-      run: |
-        wget https://edgedl.me.gvt1.com/edgedl/chrome/chrome-for-testing/117.0.5938.92/linux64/chromedriver-linux64.zip
-        unzip chromedriver-linux64.zip
-        sudo mv chromedriver-linux64/chromedriver /usr/local/bin/chromedriver
-        sudo chmod +x /usr/local/bin/chromedriver
-        rm -rf chromedriver-linux64 chromedriver-linux64.zip
-
-
+        sudo apt-get update
+        sudo apt-get install -y google-chrome-stable
+        
     - name: Run Selenium tests
       env:
-        CI: true
+        CI : true
         HEADLESS: true
         FIREFLY_URL: 34.240.131.103:8080
       run: |
