Do not expand the cron timezone on the host

--- a/docker-compose-importer.yml
+++ b/docker-compose-importer.yml
@@ -56,7 +56,7 @@ services:
     restart: always
     command: sh -c "
       apk add tzdata
-      && ln -s /usr/share/zoneinfo/${TZ} /etc/localtime
+      && ln -s /usr/share/zoneinfo/$$TZ /etc/localtime
       | echo \"0 3 * * * wget -qO- http://app:8080/api/v1/cron/$$STATIC_CRON_TOKEN;echo\"
       | crontab - 
       && crond -f -L /dev/stdout"
