Add missing depends_on in cron services

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,8 @@ services:
       crond -f -L /dev/stdout"
     networks:
       - firefly_iii
+    depends_on:
+      - app
 
 volumes:
    firefly_iii_upload:
