--- a/docker-compose-importer.yml
+++ b/docker-compose-importer.yml
@@ -63,6 +63,8 @@ services:
       crond -f -L /dev/stdout"
     networks:
       - firefly_iii
+    depends_on:
+      - app
 volumes:
    firefly_iii_upload:
    firefly_iii_db:
